# CityGuiaGo

./: .gitignore  CityGuiaGo.drawio  CityGuiaGo_API.postman_collection.json  README.md
CityGuiaGoMobile/composeApp/: build.gradle.kts
CityGuiaGoMobile/composeApp/src/main/res/drawable/: ic_alert.xml  ic_arrow_right.xml  ic_chevron_down.xml  ic_crown.xml  ic_eye_closed.xml  ic_eye_open.xml  ic_location.xml  ic_option.xml  ic_search.xml  ic_star.xml  ic_star_empty.xml  ic_star_half.xml
CityGuiaGoMobile/gradle/: libs.versions.toml
CityGuiaGoMobile/shared/: build.gradle.kts
docs/: ch2-estorias.tex  ch6-dicionario.tex  prompt.tex
mobile/: settings.gradle.kts
mobile/androidApp/: build.gradle.kts
mobile/androidApp/src/main/: AndroidManifest.xml
mobile/gradle/: libs.versions.toml
mobile/gradle/wrapper/: gradle-wrapper.properties
mobile/shared/: build.gradle.kts
web/: Dockerfile  atracoes_grande_vitoria.csv  atracoes_template.csv  db.sqlite3  package-lock.json  package.json  pyproject.toml
web/config/: settings.py  urls.py
web/core/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
web/core/management/commands/: import_atracoes.py
web/core/migrations/: 0001_initial.py  0002_migrate_usuarios_to_user.py  0003_update_foreign_keys_to_user.py  0004_remove_usuarios.py  0005_rename_duracao_estimada_roteiros_duracao_and_more.py  0006_create_sample_roteiros.py
web/core/templates/admin/core/: import_atracoes.html
web/core/templates/admin/core/atracoes/: change_list.html
web/core/templates/core/: landing.html
web/media/: .gitignore
(+87 files in other folders)
