[project]
name = "web"
version = "0.1.0"
description = ""
authors = [
    {name = "GFWagnitz"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.1.6,<6.0.0)",
    "djangorestframework (>=3.15.2,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "web"
version = "0.1.0"
description = "Django web application for CityGuiaGo"
authors = ["GFWagnitz"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = ">=3.13"
django = ">=5.1.6,<6.0.0"
djangorestframework = ">=3.15.2,<4.0.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.6"
pytest = "^7.4.3"
pytest-django = "^4.5.2"

[tool.ruff]
# Enable flake8-bugbear (`B`) rules.
select = ["E", "F", "B", "I"]
ignore = []

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.13
target-version = "py313"

[tool.ruff.format]
# Use double quotes for strings.
quote-style = "double"
# Indent with spaces, not tabs.
indent-style = "space"
# Respect magic trailing commas.
skip-magic-trailing-comma = false

[tool.ruff.isort]
known-first-party = ["core", "config"]
